--- a/index.html
+++ b/index.html
@@ -144,40 +144,63 @@
           </a>
         </div>
       </section>
-
       <!-- About Section -->
       <section id="about" class="min-h-screen flex items-center px-20">
-        <div class="grid grid-cols-2 gap-20">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-20 w-full">
+          <!-- Lanyard Card -->
           <div class="lanyard-container" data-aos="fade-right">
-            <div class="lanyard-string"></div>
             <div class="lanyard-card">
               <div class="lanyard-id">
                 <img
-                  src="/api/placeholder/400/400"
+                  src="assets/images/afif.jpg"
                   alt="Afif Taufiqurrohman"
                   class="lanyard-image shadow-lg"
                 />
-                <h3 class="text-xl font-bold">Afif Taufiqurrohman</h3>
+                <h3 class="text-gray-600 text-xl font-bold">
+                  Afif Taufiqurrohman
+                </h3>
                 <p class="text-gray-600">Developer</p>
               </div>
             </div>
           </div>
 
-          <div data-aos="fade-left" class="space-y-6">
+          <!-- Teks About -->
+          <div
+            data-aos="fade-left"
+            class="space-y-6 flex flex-col justify-center"
+          >
             <h2 class="text-4xl font-bold gradient-text">About Me</h2>
             <p class="text-gray-400 leading-relaxed">
               A passionate developer with expertise in multiple programming
               languages and frameworks. I love creating beautiful and functional
               applications that solve real-world problems.
             </p>
-            <div class="grid grid-cols-2 gap-4 mt-8">
+            <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mt-8">
               <div class="p-4 bg-gray-800 rounded-lg about-card">
+                <div class="left-light"></div>
+                <!-- Garis kiri -->
+                <div class="right-light"></div>
+                <!-- Garis kanan -->
                 <h3 class="font-bold mb-2">Experience</h3>
                 <p class="text-gray-400">5+ Years</p>
               </div>
               <div class="p-4 bg-gray-800 rounded-lg about-card">
+                <div class="left-light"></div>
+                <div class="right-light"></div>
                 <h3 class="font-bold mb-2">Projects</h3>
                 <p class="text-gray-400">50+ Completed</p>
+              </div>
+              <div class="p-4 bg-gray-800 rounded-lg about-card">
+                <div class="left-light"></div>
+                <div class="right-light"></div>
+                <h3 class="font-bold mb-2">Skills</h3>
+                <p class="text-gray-400">HTML, CSS, JS, React, Node.js</p>
+              </div>
+              <div class="p-4 bg-gray-800 rounded-lg about-card">
+                <div class="left-light"></div>
+                <div class="right-light"></div>
+                <h3 class="font-bold mb-2">Education</h3>
+                <p class="text-gray-400">Computer Science Degree</p>
               </div>
             </div>
           </div>
@@ -422,7 +445,7 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
-      // Initialize AOS
+      // Inisialisasi AOS
       AOS.init({
         duration: 1000,
         once: false,
@@ -440,51 +463,16 @@
         anchor.addEventListener("click", function (e) {
           e.preventDefault();
           const target = document.querySelector(this.getAttribute("href"));
-          target.scrollIntoView({
-            behavior: "smooth",
-          });
-          // Close mobile menu if open
-          const mobileMenu = document.querySelector(".mobile-menu");
-          if (mobileMenu.classList.contains("active")) {
-            mobileMenu.classList.remove("active");
+          target.scrollIntoView({ behavior: "smooth" });
+          if (
+            document.querySelector(".mobile-menu").classList.contains("active")
+          ) {
+            document.querySelector(".mobile-menu").classList.remove("active");
           }
         });
       });
 
-      // Form submission handling
-      const form = document.querySelector("form");
-      form.addEventListener("submit", function (e) {
-        e.preventDefault();
-        // Add your form submission logic here
-        alert("Thank you for your message! I will get back to you soon.");
-        form.reset();
-      });
-
-      // Scroll progress indicator
-      window.addEventListener("scroll", () => {
-        const scrollProgress =
-          window.scrollY /
-          (document.documentElement.scrollHeight - window.innerHeight);
-        document.documentElement.style.setProperty(
-          "--scroll-progress",
-          `${scrollProgress * 100}%`
-        );
-      });
-
-      // Skills animation on viewport
-      const observer = new IntersectionObserver((entries) => {
-        entries.forEach((entry) => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add("animate-skill");
-          }
-        });
-      });
-
-      document.querySelectorAll(".skill-card").forEach((card) => {
-        observer.observe(card);
-      });
-
-      // Sidebar toggle buka tutup
+      // Sidebar toggle
       document.addEventListener("DOMContentLoaded", function () {
         const sidebar = document.querySelector(".sidebar");
         const toggleBtn = document.querySelector(".sidebar-toggle");
@@ -495,29 +483,22 @@
           overlay.style.display = sidebar.classList.contains("active")
             ? "block"
             : "none";
-
-          // Animasi tombol toggle
           if (sidebar.classList.contains("active")) {
             toggleBtn.style.left = "260px";
-            toggleBtn.style.zIndex = "900";
           } else {
             toggleBtn.style.left = "25px";
-            toggleBtn.style.zIndex = "1100";
           }
         }
 
-        // Event listeners
         toggleBtn.addEventListener("click", toggleSidebar);
         overlay.addEventListener("click", toggleSidebar);
 
-        // Tutup dengan ESC
         document.addEventListener("keydown", (e) => {
           if (e.key === "Escape" && sidebar.classList.contains("active")) {
             toggleSidebar();
           }
         });
 
-        // Responsif untuk mobile
         window.addEventListener("resize", () => {
           if (
             window.innerWidth <= 768 &&
@@ -526,19 +507,22 @@
             toggleBtn.style.left = "calc(100% - 65px)";
           }
         });
+      });
 
-        let isDragging = false;
-        let startX, startY;
+      document.addEventListener("DOMContentLoaded", function () {
         const container = document.querySelector(".lanyard-container");
         const card = document.querySelector(".lanyard-card");
         const string = document.querySelector(".lanyard-string");
 
-        container.addEventListener("mousedown", (e) => {
+        let isDragging = false;
+        let startX, startY;
+
+        // Attach event listeners to the entire card, not just the image
+        card.addEventListener("mousedown", (e) => {
           isDragging = true;
           container.classList.add("dragging");
-          startX = e.clientX - card.offsetLeft;
-          startY = e.clientY - card.offsetTop;
-
+          startX = e.clientX;
+          startY = e.clientY;
           document.addEventListener("mousemove", onMouseMove);
           document.addEventListener("mouseup", onMouseUp);
         });
@@ -546,28 +530,35 @@
         function onMouseMove(e) {
           if (!isDragging) return;
 
-          const x = e.clientX - startX;
-          const y = e.clientY - startY;
-          const rotation = x / 15; // Reduced rotation factor for more natural movement
+          const rect = container.getBoundingClientRect();
+          const x = e.clientX - rect.left - card.offsetWidth / 2;
+          const y = e.clientY - rect.top - card.offsetHeight / 2;
 
-          // Calculate string angle and stretch based on card position
-          const stringAngle = Math.atan2(y, x) * (180 / Math.PI);
-          const stringStretch = Math.sqrt(x * x + y * y) / 300 + 1;
+          // Calculate rotation
+          const rotation = x / 10;
+
+          // Calculate angle and stretch for the string
+          const dx = x;
+          const dy = y + 200; // Offset for string attachment point
+          const angleRad = Math.atan2(dy, dx);
+          const angleDeg = angleRad * (180 / Math.PI);
+          const stretch = Math.sqrt(dx * dx + dy * dy) / 400; // Adjusted for larger card
 
           // Update CSS variables
           card.style.setProperty("--mouse-x", `${x}px`);
           card.style.setProperty("--mouse-y", `${y}px`);
           card.style.setProperty("--rotation", `${rotation}deg`);
-          string.style.setProperty("--string-angle", `${stringAngle}deg`);
-          string.style.setProperty("--string-stretch", stringStretch);
+          card.style.setProperty("--string-angle", `${angleDeg}deg`);
+          card.style.setProperty("--string-stretch", stretch);
 
-          // Apply transforms
+          // Update card transform
           card.style.transform = `translate(${x}px, ${y}px) rotate(${rotation}deg)`;
-          string.style.transform = `scaleY(${stringStretch}) rotate(${stringAngle}deg)`;
+
+          // Update string transform
+          string.style.transform = `scaleY(${stretch}) rotate(${angleDeg}deg)`;
         }
 
         function onMouseUp() {
-          if (!isDragging) return;
           isDragging = false;
           container.classList.remove("dragging");
           container.classList.add("released");
