--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Afif Taufiqurrohman - Portfolio</title>
-    <link rel="icon" href="assets/images/clock.png" type="image/png" />
+    <link rel="icon" href="assets/images/logo/halloween.png" type="image/png" />
     <link rel="stylesheet" href="assets/css/home.css" />
     <link rel="stylesheet" href="assets/css/mobile-menu.css" />
     <link rel="stylesheet" href="assets/css/sidebar.css" />
